prd/prd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prd-ingress
  namespace: prd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /prd-nginx
            backend:
              service:
                name: prd-service
                port:
                  number: 8080
